k8s/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  annotations:
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "idp-demo.xgeeks.tech"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: demo-app
                port:
                  number: 8083
  tls:
    - hosts:
        - idp-demo.xgeeks.tech
      secretName: idp-demo-tls # will be auto created
